--- a/src/app/modules/home/filter-form/filter-form.component.html
+++ b/src/app/modules/home/filter-form/filter-form.component.html
@@ -16,7 +16,7 @@
   </div>
   <!--  -->
 
-  <div class="col-md-6 form-inline">
+  <div class="col-md-6 ">
     <div class="form-group hidden">
       <div class="input-group">
         <input name="datepicker"
