--- a/src/app/modules/tourists/pages/search-result-page/search-result-page.component.html
+++ b/src/app/modules/tourists/pages/search-result-page/search-result-page.component.html
@@ -1,3 +1,4 @@
+<app-filter-form></app-filter-form>
 <div class="search-text">
     <h1>Deals and guides in Rishikesh</h1>
 </div>
@@ -120,388 +121,13 @@
   <button mdbBtn type="button" color="indigo" mdbWavesEffect>Apply</button>
 
   </div>
-  <div class="col-md-10">
-    <h1> Pick Your Guide</h1>
-    <br>
-    <br>
-    <div class="request-card" >
-
-      <mdb-card class="w-auto" >
-      <div class="container1">
-        <img src="https://cdn6.dissolve.com/p/D18_44_025/D18_44_025_0004_600.jpg" class="float-left img-fluid" alt="...">
-          <mdb-card-body>
-              
-              <div class="row">
-    <div class="col-sm-7">
-      <mdb-card-title>
-                 <a href="#"><h4>Arjun Kumar Singhal</h4></a> 
-              </mdb-card-title>
-                <mdb-card-text>
-                      <div>Age: 34</div>
-                          <hr>
-                         <a class="responsive1"> <div  data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample" >Rishikesh with 8 Locations</div>
-                          <hr></a>
-                         <a><div data-toggle="collapse" href="#collapseExample" aria-expanded="false" aria-controls="collapseExample" ><mdb-badge pill="true" default="true">4.2 </mdb-badge>&nbsp; (207 reviews)</div></a>
-                  </mdb-card-text>
-                  </div>
-                  <div class="col-sm-5" style="border-left: 1px solid rgba(128, 128, 128, 0.356);" > 
-                    <div class="side-card">
-                      <mdb-card-text>
-                        <div>Recommended Deal</div>
-                        <div style="color: green" >3 days with 8 Locations</div>
-                        <div class="row"><h1 class="col" style="color: green;" >₹2241</h1><a class="col" style="margin: auto;" href="#">View Deals</a>
-                        </div>
-                        
-                      </mdb-card-text>
-                    </div>
-                    <mdb-card-text>
-                      <div>Price Per Day</div>
-                      <div><h2>₹550</h2></div>
-                    </mdb-card-text>
-                  </div>
-        
-              </div>
-              
-    
-          </mdb-card-body>
-          
-      </div>
-      <div class="collapse" id="collapseExample">
-        <div class="mt-3">
-          <ul class="nav nav-tabs" id="myTab" role="tablist">
-            <li class="nav-item">
-              <a class="nav-link active" id="Info-tab" data-toggle="tab" href="#Info" role="tab" aria-controls="Info"
-                aria-selected="true">Info</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="rating-tab" data-toggle="tab" href="#rating" role="tab" aria-controls="rating"
-                aria-selected="false">Reviews</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact"
-                aria-selected="false">Locations</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="deal-tab" data-toggle="tab" href="#deal" role="tab" aria-controls="deal"
-                aria-selected="false">Deals</a>
-            </li>
-          </ul>
-          <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="Info" role="tabpanel" aria-labelledby="Info-tab">
-              <br>
-             <h4>About Arjun kumar Singhal</h4>
-             <p>Rishikesh is a city in India’s northern state of Uttarakhand,
-                in the Himalayan foothills beside the Ganges River. 
-                The river is considered holy, and the city is renowned as a center for studying yoga and meditation.
-                 Temples and ashrams (centers for spiritual studies) line the eastern bank around Swarg Ashram,
-                  a traffic-free, alcohol-free and vegetarian enclave upstream from Rishikesh town.</p>
-                  <hr>
-                  <h4>Languages</h4>
-                  <p>English , Hindi , Spanish , Tamil</p>
-                  <hr>
-                  <h4>Intrests</h4>
-                  <p>Advanture , Reading , music , Foodie</p>
-            </div>
-            <div class="tab-pane fade" id="rating" role="tabpanel" aria-labelledby="rating-tab"> 
-              <br>
-              <h4>Reviews</h4>
-              <hr>
-              <div class="row">
-                <div class="col-sm-5">
-                  <h1><mdb-badge pill="true" primary="true">4.2</mdb-badge></h1>
-                  <br>
-                <p> <b>Voila rating</b> based on 256 reviews</p>
-              
-                </div>
-                <div class="col-sm-7" style="border-left: 1px solid rgba(128, 128, 128, 0.308);" >
-                <h3>Recent Review</h3>
-                <br>
-                <div class="review-box">
-                  <p><b>Alexender roxx</b> 4.5/5</p>
-                  <p>Greate Experience feel great.</p>
-                </div>
-                </div>
-              </div>
-              
-              <hr>
-              <h4>More Reviews</h4>
-              <br>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6><mdb-badge pill="true" primary="true">4.2</mdb-badge></h6>
-                  <p><b>Alexa sexy</b></p>
-                </div>
-                <div class="col-sm-9" style="border-left: 1px solid rgba(128, 128, 128, 0.308);">
-                  <mdb-badge class="float-right"  pill="true" info="true">Voila approved &nbsp; <mdb-icon fas icon="check-double"></mdb-icon></mdb-badge>&nbsp;
-                   <p>Greate Experience and a really cool and hot man to roam with</p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6><mdb-badge pill="true" danger="true">2.2</mdb-badge></h6>
-                  <p><b>Hot Natasha</b></p>
-                </div>
-                <div class="col-sm-9" style="border-left: 1px solid rgba(128, 128, 128, 0.308);"> 
-            <mdb-badge class="float-right"  pill="true" info="true">Voila approved &nbsp; <mdb-icon fas icon="check-double"></mdb-icon></mdb-badge>&nbsp;
-
-                   <p>Greate Experience and a really cool and hot man to roam with</p>
-                </div>
-              </div>
-              <hr>
-            </div>
-            <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
-              <br>
-              <h4>Known Locations</h4>
-              <ol>
-                <li>Ram-jhaula</li>
-                <li>Lakshman-jhula</li>
-                <li>Beatles Aashram</li>
-                <li>Sai Ghat</li>
-                <li>Trivani ghat</li>
-                <li>Temples tour</li>
-                <li>River Rafting</li>
-                <li>Marin Drive</li>
-              </ol>
-            </div>
-              
-              <div class="tab-pane fade" id="deal" role="tabpanel" aria-labelledby="deal-tab">
-                <div class="row">
-                  <div class="col-sm-2 deal-card ">
-                    <mdb-badge pill="true" success="true">Recommended deal</mdb-badge>
-                    <p>From: 26/02/2021</p>
-                    <p>To: 5/03/2021</p>
-                    <h3>₹550 <p>/head</p></h3>
-                    <button mdbBtn type="button" class="float-right" size="sm" color="success" mdbWavesEffect>View Deal</button>
-                  </div>
-                  <div class="col-sm-2 deal-card ">
-                    <mdb-badge pill="true" success="true">Recommended deal</mdb-badge>
-                    <p>From: 26/02/2021</p>
-                    <p>To: 5/03/2021</p>
-                    <h3>₹550 <p>/head</p></h3>
-                    <button mdbBtn type="button" class="float-right" size="sm" color="success" mdbWavesEffect>View Deal</button>
-                  
-                  </div>
-                  <div class="col-sm-2 deal-card ">
-                    <mdb-badge pill="true" success="true">Recommended deal</mdb-badge>
-                    <p>From: 26/02/2021</p>
-                    <p>To: 5/03/2021</p>
-                    <h3>₹550 <p>/head</p></h3>
-                    <button mdbBtn type="button" class="float-right" size="sm" color="success" mdbWavesEffect>View Deal</button>
-                  
-                  </div>
-                  <div class="col-sm-2 deal-card ">
-                    <mdb-badge pill="true" success="true">Recommended deal</mdb-badge>
-                    <p>From: 26/02/2021</p>
-                    <p>To: 5/03/2021</p>
-                    <h3>₹550 <p>/head</p></h3>
-                    <button mdbBtn type="button" class="float-right" size="sm" color="success" mdbWavesEffect>View Deal</button>
-                  
-                  </div>
-                  <div class="button-book float-right ">
-                    <button mdbBtn type="button" size="sm" color="primary" mdbWavesEffect>Book Now</button>
-                  <button mdbBtn type="button" class="float-right" size="sm" color="success" mdbWavesEffect>More Deal</button>
-
-                  </div>
-                  
-                </div>
-
-              </div>
-          </div>
-        </div>
-      </div>
-    </mdb-card>
-    </div>
-    <!-- second card -->
-    <div class="request-card" >
-<br>
-      <mdb-card>
-      <div class="container1">
-        <img src="https://cdn6.dissolve.com/p/D18_44_025/D18_44_025_0004_600.jpg" class="float-left img-fluid" alt="...">
-          <mdb-card-body>
-              
-              <div class="row">
-    <div class="col-sm-7">
-      <mdb-card-title>
-                 <a href="#"><h4>Arjun Kumar Singhal</h4></a> 
-              </mdb-card-title>
-                <mdb-card-text>
-                      <div>Age: 34</div>
-                          <hr>
-                         <a  class="responsive1"> <div  data-toggle="collapse" href="#collapseExample1" aria-expanded="false" aria-controls="collapseExample" >Rishikesh with 8 Locations</div> <hr></a>
-                        
-                         <a><div data-toggle="collapse" href="#collapseExample1" aria-expanded="false" aria-controls="collapseExample" ><mdb-badge pill="true" default="true">4.2 </mdb-badge>&nbsp; (207 reviews)</div></a>
-                  </mdb-card-text>
-                  </div>
-                  <div class="col-sm-5" style="border-left: 1px solid rgba(128, 128, 128, 0.356);" > 
-                    <div class="side-card">
-                      <mdb-card-text>
-                        <div>Recommended Deal</div>
-                        <div style="color: green" >3 days with 8 Locations</div>
-                        <div class="row"><h1 class="col" style="color: green;" >₹2241</h1><a class="col" style="margin: auto;" href="#">View Deals</a>
-                        </div>
-                        
-                      </mdb-card-text>
-                    </div>
-                    <mdb-card-text>
-                      <div>Price Per Day</div>
-                      <div><h2>₹550</h2></div>
-                    </mdb-card-text>
-                  </div>
-        
-              </div>
-              
-    
-          </mdb-card-body>
-          
-      </div>
-      <div class="collapse" id="collapseExample1">
-        <div class="mt-3">
-          <ul class="nav nav-tabs" id="myTab" role="tablist">
-            <li class="nav-item">
-              <a class="nav-link active" id="Info-tab" data-toggle="tab" href="#Info1" role="tab" aria-controls="Info"
-                aria-selected="true">Info</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="rating-tab" data-toggle="tab" href="#rating1" role="tab" aria-controls="rating"
-                aria-selected="false">Reviews</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact1" role="tab" aria-controls="contact"
-                aria-selected="false">Locations</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" id="deal-tab" data-toggle="tab" href="#deal1" role="tab" aria-controls="deal"
-                aria-selected="false">Deals</a>
-            </li>
-          </ul>
-          <div class="tab-content" id="myTabContent">
-            <div class="tab-pane fade show active" id="Info1" role="tabpanel" aria-labelledby="Info-tab">
-              <br>
-             <h4>About Arjun kumar Singhal</h4>
-             <p>Rishikesh is a city in India’s northern state of Uttarakhand,
-                in the Himalayan foothills beside the Ganges River. 
-                The river is considered holy, and the city is renowned as a center for studying yoga and meditation.
-                 Temples and ashrams (centers for spiritual studies) line the eastern bank around Swarg Ashram,
-                  a traffic-free, alcohol-free and vegetarian enclave upstream from Rishikesh town.</p>
-                  <hr>
-                  <h4>Languages</h4>
-                  <p>English , Hindi , Spanish , Tamil</p>
-                  <hr>
-                  <h4>Intrests</h4>
-                  <p>Advanture , Reading , music , Foodie</p>
-            </div>
-            <div class="tab-pane fade" id="rating1" role="tabpanel" aria-labelledby="rating-tab"> 
-              <br>
-              <h4>Reviews</h4>
-              <hr>
-              <div class="row">
-                <div class="col-sm-5">
-                  <h1><mdb-badge pill="true" primary="true">4.2</mdb-badge></h1>
-                  <br>
-                <p> <b>Voila rating</b> based on 256 reviews</p>
-              
-                </div>
-                <div class="col-sm-7" style="border-left: 1px solid rgba(128, 128, 128, 0.308);" >
-                <h3>Recent Review</h3>
-                <br>
-                <div class="review-box">
-                  <p><b>Alexender roxx</b> 4.5/5</p>
-                  <p>Greate Experience feel great.</p>
-                </div>
-                </div>
-              </div>
-              
-              <hr>
-              <h4>More Reviews</h4>
-              <br>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6><mdb-badge pill="true" primary="true">4.2</mdb-badge></h6>
-                  <p><b>Alexa sexy</b></p>
-                </div>
-                <div class="col-sm-9" style="border-left: 1px solid rgba(128, 128, 128, 0.308);">
-                  <mdb-badge class="float-right"  pill="true" info="true">Voila approved &nbsp; <mdb-icon fas icon="check-double"></mdb-icon></mdb-badge>&nbsp;
-                   <p>Greate Experience and a really cool and hot man to roam with</p>
-                </div>
-              </div>
-              <hr>
-              <div class="row">
-                <div class="col-sm-3">
-                  <h6><mdb-badge pill="true" danger="true">2.2</mdb-badge></h6>
-                  <p><b>Hot Natasha</b></p>
-                </div>
-                <div class="col-sm-9" style="border-left: 1px solid rgba(128, 128, 128, 0.308);"> 
-            <mdb-badge class="float-right"  pill="true" info="true">Voila approved &nbsp; <mdb-icon fas icon="check-double"></mdb-icon></mdb-badge>&nbsp;
-
-                   <p>Greate Experience and a really cool and hot man to roam with</p>
-                </div>
-              </div>
-              <hr>
-            </div>
-            <div class="tab-pane fade" id="contact1" role="tabpanel" aria-labelledby="contact-tab">
-              <br>
-              <h4>Known Locations</h4>
-              <ol>
-                <li>Ram-jhaula</li>
-                <li>Lakshman-jhula</li>
-                <li>Beatles Aashram</li>
-                <li>Sai Ghat</li>
-                <li>Trivani ghat</li>
-                <li>Temples tour</li>
-                <li>River Rafting</li>
-                <li>Marin Drive</li>
-              </ol>
-            </div>
-              
-              <div class="tab-pane fade" id="deal1" role="tabpanel" aria-labelledby="deal-tab">
-                <div class="row">
-                  <div class="col-sm-2 deal-card ">
-                    <mdb-badge pill="true" success="true">Recommended deal</mdb-badge>
-                    <p>From: 26/02/2021</p>
-                    <p>To: 5/03/2021</p>
-                    <h3>₹550 <p>/head</p></h3>
-                    <button mdbBtn type="button" class="float-right" size="sm" color="success" mdbWavesEffect>View Deal</button>
-                  </div>
-                  <div class="col-sm-2 deal-card ">
-                    <mdb-badge pill="true" success="true">Recommended deal</mdb-badge>
-                    <p>From: 26/02/2021</p>
-                    <p>To: 5/03/2021</p>
-                    <h3>₹550 <p>/head</p></h3>
-                    <button mdbBtn type="button" class="float-right" size="sm" color="success" mdbWavesEffect>View Deal</button>
-                  
-                  </div>
-                  <div class="col-sm-2 deal-card ">
-                    <mdb-badge pill="true" success="true">Recommended deal</mdb-badge>
-                    <p>From: 26/02/2021</p>
-                    <p>To: 5/03/2021</p>
-                    <h3>₹550 <p>/head</p></h3>
-                    <button mdbBtn type="button" class="float-right" size="sm" color="success" mdbWavesEffect>View Deal</button>
-                  
-                  </div>
-                  <div class="col-sm-2 deal-card ">
-                    <mdb-badge pill="true" success="true">Recommended deal</mdb-badge>
-                    <p>From: 26/02/2021</p>
-                    <p>To: 5/03/2021</p>
-                    <h3>₹550 <p>/head</p></h3>
-                    <button mdbBtn type="button" class="float-right" size="sm" color="success" mdbWavesEffect>View Deal</button>
-                  
-                  </div>
-                  <div class="button-book float-right ">
-                    <button mdbBtn type="button" size="sm" color="primary" mdbWavesEffect>Book Now</button>
-                  <button mdbBtn type="button" class="float-right" size="sm" color="success" mdbWavesEffect>More Deal</button>
-
-                  </div>
-                  
-                </div>
-
-              </div>
-          </div>
-        </div>
-      </div>
-    </mdb-card>
-    </div>
-
+  <div class="col-md-9">
+    <ul>
+      <li><a [routerLink]="['guidesList']" routerLinkActive="active">Guides</a></li>
+      <li><a [routerLink]="['dealsList']" routerLinkActive="active">Deals</a></li>
+    </ul>
+    <router-outlet></router-outlet>
+    <!--  -->
 
    </div>
    </div>
