--- a/src/app/shared/components/guide-profile/guide-profile.component.html
+++ b/src/app/shared/components/guide-profile/guide-profile.component.html
@@ -1,6 +1,3 @@
-<p>
-    guide-profile works!
-</p>
 <div class="container guide-contain">
     <div class="row">
         <div class="col-md-4 pr-4">
@@ -19,7 +16,7 @@
                             <!--/Card image-->
                         </div>
                         <div class="col-md-8">
-                            <h2>Barkha Joshi</h2>
+                            <h2>{{guide?.name}}</h2>
                             <div>
                                 <mdb-icon fas icon="star"></mdb-icon>
                                 <mdb-icon fas icon="star"></mdb-icon>
@@ -47,16 +44,16 @@
                         <mdb-icon fas icon="check-circle" class="purple-text pr-1"></mdb-icon>Verified <strong>Local Tour Guide</strong>
                     </div>
                     <div>
-                        <mdb-icon fas icon="map-marker-alt" class="purple-text pr-1"></mdb-icon>Lives in <strong>Pune</strong>
+                        <mdb-icon fas icon="map-marker-alt" class="purple-text pr-1"></mdb-icon>Lives in <strong>{{guide?.city}}, {{guide?.state}}</strong>
                     </div>
                     <div>
                         <mdb-icon fas icon="birthday-cake" class="purple-text pr-1"></mdb-icon><strong>27 years old</strong>
                     </div>
                     <div>
-                        <mdb-icon fas icon="globe" class="purple-text pr-1"></mdb-icon>Speaks <strong>English, Hindi & French</strong>
+                        <mdb-icon fas icon="globe" class="purple-text pr-1"></mdb-icon>Speaks <strong>{{guide?.languages.toString()}}</strong>
                     </div>
                     <div>
-                        <mdb-icon fas icon="heart" class="purple-text pr-1"></mdb-icon>Loves <strong>Photography, Nature & Street Food</strong>
+                        <mdb-icon fas icon="heart" class="purple-text pr-1"></mdb-icon>Loves <strong>{{guide?.interests.toString()}}</strong>
                     </div>
 
                     <!-- Guide biodata -->
@@ -101,65 +98,9 @@
                     </h6>
                     <!-- Provides extra visual weight and identifies the primary action in a set of buttons -->
                     <!-- <button type="button" class="btn  pink darken-3 btn-md" data-toggle="modal" data-target="#modalLoginAvatar">Request a personalized Tour</button> -->
-                    <!--Modal: Login with Avatar Form-->
-                    <div class="modal fade" id="modalLoginAvatar" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-                        <div class="modal-dialog cascading-modal modal-avatar " role="document">
-                            <!--Content-->
-                            <div class="modal-content">
-
-                                <!--Header-->
-                                <div class="modal-header">
-                                    <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="height:100px; width:100px" alt="avatar" class="rounded-circle img-responsive">
-                                </div>
-                                <!--Body-->
-                                <div class="modal-body text-center mb-1">
-
-                                    <h5 class="mt-1 mb-3">Hi! Lets personalize your experience</h5>
-                                    <hr mx-3>
-                                    <h5 class="text-left black-text">Tell me your preferred Date</h5>
-                                    <div class="row">
-                                        <div class="col">
-                                            <div class="mb-0 text-left">From</div>
-                                            <my-date-picker name="mydate" mdbInput placeholder="dd-mm-yyyy" [options]="myDatePickerOptions"></my-date-picker>
-                                        </div>
-                                        <div class="col">
-                                            <div class="mb-0 text-left">To</div>
-                                            <my-date-picker name="mydate" mdbInput placeholder="dd-mm-yyyy" id="input" [options]="myDatePickerOptions"></my-date-picker>
-                                        </div>
-
-                                    </div>
-                                    <div class="font-small text-left mt-0">You can opt for a single day tour as well as multiple days' tours.</div>
-                                    <h5 class="text-left black-text mt-2">So how many Travellers are you?</h5>
-                                    <div class="row">
-                                        <div class="col">
-
-                                            <input type="number" mdbInput class="form-control" placeholder="Adults">
-                                        </div>
-                                        <div class="col">
-
-                                            <input type="number" mdbInput class="form-control" placeholder="Children">
-                                        </div>
-                                    </div>
-
-
-                                    <!-- <div class="md-form ml-0 mr-0">
-                                        <input type="password" type="text" id="form29" class="form-control form-control-sm validate ml-0">
-                                        <label data-error="wrong" data-success="right" for="form29" class="ml-0">Enter password</label>
-                                    </div> -->
-
-                                    <div class="text-center mt-4">
-                                        <button class="btn btn-cyan mt-1">Request a personalized Tour</button>
-                                    </div>
-                                </div>
-
-                            </div>
-                            <!--/.Content-->
-                        </div>
-                    </div>
-                    <!--Modal: Login with Avatar Form-->
-
+                    
                     <div class="text-center">
-                        <a href="" class="btn pink darken-3 btn-rounded " data-toggle="modal" data-target="#modalLoginAvatar">Request a personalized Tour</a>
+                        <a class="btn pink darken-3 btn-rounded " (click)="openModal(personalTour)" >Request a personalized Tour</a>
                     </div>
 
                 </div>
@@ -168,94 +109,31 @@
             <!-- Card -->
             <div>
                 <h1 my-2>My Tour Deals in Pune</h1>
-                <div class="d-flex flex-wrap my-4">
-                    <div class="w-50 p-2">
+                <app-deals-cards [dealsList]="dealList"></app-deals-cards>
+                <!-- <div class="d-flex flex-wrap my-4">
+                    <div class="w-50 p-2" *ngFor="let deal of dealList">
                         <mdb-card>
                             <div class="img-fav">
-                                <i class="far fa-heart fa-lg"></i>
-                                <!--Card image-->
+                                <i class="fas fa-heart fa-lg pink-text" ></i>
                                 <mdb-card-img class="main-img" src="https://images.thrillophilia.com/image/upload/s--8pyG_oK_--/c_fill,dpr_1.0,f_auto,fl_strip_profile,g_center,h_450,q_auto,w_753/v1/images/photos/000/113/476/original/1501063349_Pune_Palace.jpg.jpg" alt="Card image cap"></mdb-card-img>
                                 <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
-                                <h5><span class="badge badge-default font-weight-normal">Pune tour with Barkha Joshi</span></h5>
+                                <h5><span class="badge badge-default font-weight-normal">{{deal.city}} tour with Barkha Joshi</span></h5>
                             </div>
-                            <!--Card content-->
                             <mdb-card-body>
-                                <!--Title-->
                                 <mdb-card-title>
-                                    <h5><strong>The Royal Heritage Tour</strong></h5>
+                                    <h5><strong>{{deal.places[0]}} Tour</strong></h5>
                                 </mdb-card-title>
-
-                                <!--Text-->
+                      
                                 <mdb-card-text>
-                                    <div>Palaces, forts and museums. A complete introduction to the royal past.</div>
-                                    <div>&#x20b9;1000 pp &#8226; 4.5 hours &#8226; City Highlights Tour</div>
+                                    <div>{{deal.places.toString()}}.</div>
+                                    <div>&#x20b9;{{deal.price}} pp &#8226; From {{deal.startDate | date: 'dd-MM-yy'}} &#8226; To {{deal.endDate | date: 'dd-MM-yy'}}</div>
                                 </mdb-card-text>
-
-                                <!-- <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a> -->
+                      
                             </mdb-card-body>
                         </mdb-card>
                     </div>
-                    <div class="w-50 p-2">
-                        <mdb-card>
-                            <!--Card image-->
-                            <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap"></mdb-card-img>
-                            <!--Card content-->
-                            <mdb-card-body>
-
-                                <!--Title-->
-                                <mdb-card-title>
-                                    <h4>Card Title</h4>
-                                </mdb-card-title>
-
-                                <!--Text-->
-                                <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's content.
-                                </mdb-card-text>
-
-                                <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a>
-                            </mdb-card-body>
-                        </mdb-card>
-                    </div>
-                    <div class="w-50 p-2">
-                        <mdb-card>
-                            <!--Card image-->
-                            <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap"></mdb-card-img>
-                            <!--Card content-->
-                            <mdb-card-body>
-
-                                <!--Title-->
-                                <mdb-card-title>
-                                    <h4>Card Title</h4>
-                                </mdb-card-title>
-
-                                <!--Text-->
-                                <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's content.
-                                </mdb-card-text>
-
-                                <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a>
-                            </mdb-card-body>
-                        </mdb-card>
-                    </div>
-                    <div class="w-50 p-2">
-                        <mdb-card>
-                            <!--Card image-->
-                            <mdb-card-img src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap"></mdb-card-img>
-                            <!--Card content-->
-                            <mdb-card-body>
-
-                                <!--Title-->
-                                <mdb-card-title>
-                                    <h4>Card Title</h4>
-                                </mdb-card-title>
-
-                                <!--Text-->
-                                <mdb-card-text> Some quick example text to build on the card title and make up the bulk of the card's content.
-                                </mdb-card-text>
-
-                                <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a>
-                            </mdb-card-body>
-                        </mdb-card>
-                    </div>
-                </div>
+                    
+                </div> -->
 
             </div>
 
@@ -263,3 +141,117 @@
     </div>
 
 </div>
+
+
+
+
+
+
+<!--Modal: Login with Avatar Form-->
+<div mdbModal #personalTour="mdbModal" class="modal fade" id="modalLoginAvatar" tabindex="-1" role="dialog" aria-labelledby="mytourLabel" aria-hidden="true">
+    <div class="modal-dialog cascading-modal modal-avatar " role="document">
+        <!--Content-->
+        <div class="modal-content">
+            <form [formGroup]="personalBooking" (ngSubmit)="submitPersonalBooking()">
+            <!--Header-->
+            <div class="modal-header">
+                <img src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="height:100px; width:100px" alt="avatar" class="rounded-circle img-responsive">
+            </div>
+            <!--Body-->
+            <div class="modal-body text-center mb-1">
+
+                <h5 class="mt-1 mb-3">Hi! Lets personalize your experience</h5>
+                <hr mx-3>
+                <h5 class="text-left black-text">Tell me your preferred Date</h5>
+                <div class="row form-inline">
+                    
+                    <div class=" col-md-12 form-group hidden">
+                        <div class="input-group">
+                          <input name="datepicker"
+                                 class="form-control"
+                                 ngbDatepicker
+                                 #datepicker="ngbDatepicker"
+                                 [autoClose]="'outside'"
+                                 (dateSelect)="onDateSelection($event)"
+                                 [displayMonths]="2"
+                                 [dayTemplate]="t"
+                                 outsideDays="hidden"
+                                 [startDate]="fromDate!">
+                          <ng-template #t let-date let-focused="focused">
+                            <span class="custom-day"
+                                  [class.focused]="focused"
+                                  [class.range]="isRange(date)"
+                                  [class.faded]="isHovered(date) || isInside(date)"
+                                  (mouseenter)="hoveredDate = date"
+                                  (mouseleave)="hoveredDate = null">
+                              {{ date.day }}
+                            </span>
+                          </ng-template>
+                        </div>
+                      </div>
+                      <div class="form-group">
+                        <div class="input-group">
+                          <input #dpFromDate
+                                 class="form-control" placeholder="yyyy-mm-dd"
+                                 name="dpFromDate"
+                                 formControlName="startDate"
+                                 [value]="formatter.format(fromDate)"
+                                 (input)="fromDate = validateInput(fromDate, dpFromDate.value)">
+                          <div class="input-group-append">
+                            <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="form-group ml-2">
+                        <div class="input-group">
+                          <input #dpToDate
+                                 class="form-control" placeholder="yyyy-mm-dd"
+                                 name="dpToDate"
+                                 formControlName="endDate"
+                                 [value]="formatter.format(toDate)"
+                                 (input)="toDate = validateInput(toDate, dpToDate.value)">
+                          <div class="input-group-append">
+                            <button class="btn btn-outline-secondary calendar" (click)="datepicker.toggle()" type="button"></button>
+                          </div>
+                        </div>
+                      </div>
+
+                </div>
+                <!--  -->
+                <div class="font-small text-left mt-0">You can opt for a single day tour as well as multiple days' tours.</div>
+                <h5 class="text-left black-text mt-2">So how many Travellers are you?</h5>
+                <div class="row">
+                    <div class="col">
+                        <div class="form-group">
+                            <select formControlName="groupType" class="form-control">
+                                <option value="" disabled>Select</option>
+                                <option *ngFor="let item of groupTypesList" [value]="item">{{item}}</option>
+                            </select>
+                        </div>
+
+                        <!-- <input type="number" mdbInput class="form-control" placeholder="Adults"> -->
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                        <input type="number" formControlName="noOfPeople" class="form-control" placeholder="no of people">
+                        </div>
+                    </div>
+                </div>
+
+
+                <!-- <div class="md-form ml-0 mr-0">
+                    <input type="password" type="text" id="form29" class="form-control form-control-sm validate ml-0">
+                    <label data-error="wrong" data-success="right" for="form29" class="ml-0">Enter password</label>
+                </div> -->
+
+                <div class="text-center mt-4">
+                    <button type="submit" class="btn btn-cyan mt-1">Request a personalized Tour</button>
+                </div>
+            </div>
+        </form>
+
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!--Modal: Login with Avatar Form-->
