--- a/src/app/modules/tourists/components/deals-list/deals-list.component.html
+++ b/src/app/modules/tourists/components/deals-list/deals-list.component.html
@@ -1,29 +1,25 @@
-<h2>Your Favourites</h2>
-<div class="row">
-    <div class="col-md-4" *ngFor="let deal of favouritesList">
+ <h2>Your Favourites</h2>
+ <app-deals-cards [dealsList]=" searchService.dealsList"></app-deals-cards>
+<!--<div class="row">
+    <div class="col-md-4" *ngFor="let deal of searchService.dealsList">
       <mdb-card>
         <div class="img-fav">
-            <i class="fas fa-heart fa-lg pink-text" ></i>
-            <!--Card image-->
+            <i class="far fa-heart fa-lg pink-text" ></i>
             <mdb-card-img class="main-img" src="https://images.thrillophilia.com/image/upload/s--8pyG_oK_--/c_fill,dpr_1.0,f_auto,fl_strip_profile,g_center,h_450,q_auto,w_753/v1/images/photos/000/113/476/original/1501063349_Pune_Palace.jpg.jpg" alt="Card image cap"></mdb-card-img>
             <img class="card-img rounded-circle" src="assets\images\jyotirmoy-gupta-leQOdFApLRw-unsplash.jpg" style="width:70px; height:70px; border:white 3px solid;" alt="Card image cap">
             <h5><span class="badge badge-default font-weight-normal">{{deal.city}} tour with Barkha Joshi</span></h5>
         </div>
-        <!--Card content-->
         <mdb-card-body>
-            <!--Title-->
             <mdb-card-title>
                 <h5><strong>{{deal.places[0]}} Tour</strong></h5>
             </mdb-card-title>
   
-            <!--Text-->
             <mdb-card-text>
                 <div>{{deal.places.toString()}}.</div>
                 <div>&#x20b9;{{deal.price}} pp &#8226; From {{deal.startDate | date: 'dd-MM-yy'}} &#8226; To {{deal.endDate | date: 'dd-MM-yy'}}</div>
             </mdb-card-text>
   
-            <!-- <a href="#" mdbBtn color="primary" mdbWavesEffect>Button</a> -->
         </mdb-card-body>
     </mdb-card>
     </div>
-  </div>
+  </div> -->
